# godot-roguelite

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Folder.DotSettings  LICENSE  LocalBuild.md  README.md  SConstruct  TODO.md  cpp.hint  vcpkg.json
.github/actions/android-deps/: action.yml
.github/actions/build-cache/: action.yml
.github/workflows/: cmake-multi-platform.yml
cmake/: ccache.cmake  clang-format.cmake  cmake-utils.cmake  godot-dev-configuration.cmake  iwyu.cmake  vcpkg-init.cmake  vcpkg-install-deps.cmake  vcpkg-setup.cmake
doc_classes/: GDExample.xml
project/: .gitattributes  .gut_editor_config.json  icon.png.import  icon.svg.import  main.gd  main.tscn  main_window.tscn  project.godot  roguelite.gdextension  roguelite.gdextension.uid  sg_physics_2d.gdextension  wui.gdextension
project/assets/art/: license
project/assets/audio/: LICENSE
project/assets/themes/: console_text_box.tres  default.tres  fira_code_font_theme.tres
project/demos/broadphase_perf/: FixedObject.gd  FixedObject.tscn  Main.gd  Main.tscn
project/demos/fixed_node_2d_perf/: FixedObject.gd  FixedObject.tscn  FloatObject.gd  FloatObject.tscn  Main.gd  Main.tscn
project/demos/gravity/: Main.tscn  Player.gd
project/demos/move_and_collide/: MoveAndCollide.gd  MoveAndCollide.tscn  tank_blue.png.import
project/demos/tilemap/: Main.gd  Main.tscn  test_tiles.png.import  test_tiles.tres
project/scenes/characters/: enemy.tscn  player.tscn
project/scenes/levels/: level1.tscn
project/scenes/projectiles/: bullet.tscn
project/scenes/ui/: main_dialog.tscn
project/scripts/: main.gd  main.gd.uid  test.gd
project/tests/: Tests.tscn
project/tests/unit/: test_SGFixedNode2D.gd  test_SGFixedTransform2D.gd  test_SGVector2.gd  test_fixed_math.gd
roguelite/: character.tscn  icon.svg.import  main.tscn  main_window.tscn  project.godot  root.tscn  signal_listener.gd
roguelite/art/: TX Plant.png.import  TX Player.png.import  TX Props.png.import  TX Shadow Plant.png.import  TX Shadow.png.import  TX Struct.png.import  TX Tileset Grass.png.import  TX Tileset Stone Ground.png.import  TX Tileset Wall.png.import  icon.svg.import
roguelite/assets/scripts/: game_root.gd  pickup_behavior.gd  ui_hud.gd  ui_hud_updater.gd
roguelite/scenes/: player.tscn
scripts/: build-engine.sh  build-godot-cpp.sh
scripts/cmake/: utils.cmake
scripts/shell/: install-deps.sh
src/: character.cpp  character.hpp  character_controller_2d.cpp  character_controller_2d.hpp  cppnpc.cpp  cppnpc.h  gdexample.cpp  gdexample.h  gdexample.hpp  init_gdextension.cpp  main.cpp  main.hpp  register_types.cpp  register_types.h  register_types.hpp  test.hpp
src/api/: extension_interface.cpp  extension_interface.hpp  module_interface.cpp  module_interface.hpp
src/core/: assert.hpp  concepts.hpp  console_capture.cpp  console_capture.hpp  constants.hpp  function_traits.hpp  level.cpp  level.hpp  level_loader.cpp  level_loader.hpp  projectile_spawner.cpp  projectile_spawner.hpp
src/doc_classes/: SGArea2D.xml  SGAreaCollision2D.xml  SGCapsuleShape2D.xml  SGCharacterBody2D.xml  SGCircleShape2D.xml  SGCollisionObject2D.xml  SGCollisionPolygon2D.xml  SGCollisionShape2D.xml  SGFixed.xml  SGFixedNode2D.xml  SGFixedPosition2D.xml  SGFixedRect2.xml  SGFixedTransform2D.xml  SGFixedVector2.xml  SGKinematicCollision2D.xml  SGPhysics2DServer.xml  SGRayCast2D.xml  SGRectangleShape2D.xml  SGShape2D.xml  SGStaticBody2D.xml
src/editor/: sg_collision_polygon_2d_editor_plugin.cpp  sg_collision_polygon_2d_editor_plugin.h  sg_collision_shape_2d_editor_plugin.cpp  sg_collision_shape_2d_editor_plugin.h
src/entity/: camera.cpp  camera.hpp  level.cpp  level.hpp
src/entity/character/: character.cpp  character.hpp  enemy.cpp  enemy.hpp  player.cpp  player.hpp
src/entity/controller/: character_controller.cpp  character_controller.hpp  enemy_controller.cpp  enemy_controller.hpp  player_controller.cpp  player_controller.hpp
src/entity/projectile/: projectile.cpp  projectile.hpp  projectile_spawner.cpp  projectile_spawner.hpp
src/gizmos/: constants.hpp  gizmo_resource.hpp  node_gizmo.hpp
src/internal/: sg_bodies_2d_internal.cpp  sg_bodies_2d_internal.h  sg_broadphase_2d_internal.cpp  sg_broadphase_2d_internal.h  sg_collision_detector_2d_internal.cpp  sg_collision_detector_2d_internal.h  sg_fixed_number_internal.cpp  sg_fixed_number_internal.h  sg_fixed_rect2_internal.h  sg_fixed_transform_2d_internal.cpp  sg_fixed_transform_2d_internal.h  sg_fixed_vector2_internal.cpp  sg_fixed_vector2_internal.h  sg_result_handler_internal.h  sg_shapes_2d_internal.cpp  sg_shapes_2d_internal.h  sg_utils_internal.h  sg_world_2d_internal.cpp  sg_world_2d_internal.h
src/math/: sg_fixed_rect2.cpp  sg_fixed_rect2.h  sg_fixed_singleton.cpp  sg_fixed_singleton.h  sg_fixed_transform_2d.cpp  sg_fixed_transform_2d.h  sg_fixed_vector2.cpp  sg_fixed_vector2.h
src/nodes/: camera.cpp  camera.hpp  character.cpp  character.hpp  game.cpp  game.hpp  input.cpp  input.hpp  level.cpp  level.hpp  level_manager.cpp  level_manager.hpp  player.cpp  player.hpp  player_controller.cpp  player_controller.hpp  projectile.cpp  projectile.hpp  projectile_spawner.cpp  projectile_spawner.hpp
src/resources/: input.cpp  input.hpp
src/scene/2d/: sg_area_2d.cpp  sg_area_2d.h  sg_character_body_2d.cpp  sg_character_body_2d.h  sg_collision_object_2d.cpp  sg_collision_object_2d.h  sg_fixed_node_2d.cpp  (+13 more)
src/servers/: sg_physics_2d_server.cpp  sg_physics_2d_server.h
src/settings/: settings.cpp  settings.hpp
src/singletons/: console.hpp
src/tools/: gizmo_resource.hpp
src/ui/: debug_overlay.hpp  main_dialog.cpp  main_dialog.hpp  main_interface_diag.cpp  main_interface_diag.hpp
src/util/: assert.hpp  assets.hpp  attributes.hpp  bind.hpp  bindings.hpp  concepts.hpp  console.hpp  constants.hpp  conversions.hpp  debug.hpp  engine.cpp  engine.hpp  function_traits.hpp  input.cpp  input.hpp  io.hpp  options.hpp  os.hpp  scene.hpp  signals.hpp  utils.cpp  utils.hpp  variant.hpp
src/utils/: bindings.hpp  utils.cpp  utils.hpp
(+311 files in other folders)
